@@ -5,6 +5,7 @@
 <body>
 <font size=+3><center><b>Retraining AUGUSTUS</b></center></font><br>
 
+This documentation holds only part of the available info and is complemented by the tutorials under the doc folder, the <a href="http://bioinf.uni-greifswald.de/bioinf/wiki/pmwiki.php?n=Forum.Forum">Forum</a> and <a href="http://bioinf.uni-greifswald.de/bioinf/wiki/pmwiki.php?n=Augustus.Augustus">Wiki</a>.<br>
 This manual is intended for those who want to retrain on their own ab initio AUGUSTUS for another species.
 Please do not rely on this manual and the scripts and programs. Check what they do on your data! This document is work in progress.
 If you want us to retrain AUGUSTUS for your species, please contact me through mstanke@gwdg.de.
@@ -29,7 +30,7 @@ be on either strand. However, the genes must not overlap, and only one
 transcript per gene is allowed. Store the sequences together with
 their annotation in a simple <b>genbank format</b>. For the exact format
 that the training program can read in look as an example at one of the training genbank
-files at the augustus web server: <a href="http://augustus.gobics.de/datasets/">http://augustus.gobics.de/datasets/</a>
+files at the augustus web server: <a href="http://bioinf.uni-greifswald.de/augustus/datasets/">http://bioinf.uni-greifswald.de/augustus/datasets/</a>
 <p>Randomly <b>split </b>the set of annotated sequences in a <b>training
 and a test set</b>. Lets call these two files myspecies.train.gb and myspecies.test.gb.
 In order for the test accuracy to be statistically meaningful the test
